tests/baselines/reference/parserEmptyParenthesizedExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEmptyParenthesizedExpression1.ts(2,5): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEmptyParenthesizedExpression1.ts (1 errors) ====
    function getObj() {
       ().toString();
        ~
!!! error TS1109: Expression expected.
    }